--- a/news21national/templates/n21alpha/registration/registration_complete.html
+++ b/news21national/templates/n21alpha/registration/registration_complete.html
@@ -8,10 +8,10 @@
 
 
 {% block content %}
-
-{% blocktrans %}
-<h1>Thank you</h1>
-<p>An email has been sent to you. You need to click link in it to activate your account.</p>
-{% endblocktrans %}
-
+	<div class="grid_16">
+	{% blocktrans %}
+	<h1>Thank you</h1>
+	<p>An email has been sent to you. You need to click link in it to activate your account.</p>
+	{% endblocktrans %}
+	</div>
 {% endblock %}
