--- a/news21national/templates/n21alpha/registration/registration_form.html
+++ b/news21national/templates/n21alpha/registration/registration_form.html
@@ -18,7 +18,7 @@
 {% endif %}
 
 <h2>Register for an account:</h2>
-<!--<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p> -->
+<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
 
 <form action="" method="post">
     <fieldset>
