adjusted admin to allow for profile is active filter

--- a/news21national/templates/n21alpha/admin/base_site.html
+++ b/news21national/templates/n21alpha/admin/base_site.html
@@ -3,5 +3,5 @@
 {% load i18n %}
 
 {% block branding %}
-<h1 id="site-name" > {% trans 'limestone' %}</h1>
+<h1 id="site-name" > {% trans 'Asset Management & Syndication' %}</h1>
 {% endblock %}
