--- a/news21national/templates/n21alpha/core/home.html
+++ b/news21national/templates/n21alpha/core/home.html
@@ -16,7 +16,7 @@
 	{% else %}
 		<div class="grid_16 contentheader">
 		<h2>Log-In:</h2>
-		<!--<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>-->
+		<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
 		<div class="login">
 
 		    <form id="auth_form" name="auth_form" action="{% url user_signin %}" method="post">
