--- a/news21national/templates/n21alpha/registration/registration_form.html
+++ b/news21national/templates/n21alpha/registration/registration_form.html
@@ -19,10 +19,22 @@
 
 <h2>Register for an account:</h2>
 <p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
-
+<div>
+	<h4>Registration Steps</h4>
+	<strong>Step 1</strong>: Fill out the registration form. Use a real email as you will be sent an activation link for verification.
+	<br/>
+	<strong>Step 2</strong>: Check your email ... click the link sent to verify that your email address is valid.
+	<br/>
+	<strong>Step 3</strong>: Once your email has been validated, login. You should be taken directly to your profile page.
+	<br/>
+	<strong>Step 4</strong>: After submitting your profile information ... your account will be place in a "Pending" status until it is verified.
+	<br/>
+	<strong>Step 5</strong>: Check back, your account should be verified by a moderator.
+	<br/>
+	<br/>
+</div>
 <form action="" method="post">
     <fieldset>
-	    <legend>{% trans "Sign In Using Your Account ID" %}</legend>
 	    <table>
 		    {{ form.as_table }}
 	    </table>
