added registration step to registration page

--- a/news21national/templates/n21alpha/registration/registration_form.html
+++ b/news21national/templates/n21alpha/registration/registration_form.html
@@ -21,7 +21,7 @@
 <p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
 <div>
 	<h4>Registration Steps</h4>
-	<strong>Step 1</strong>: Fill out the registration form (use your byline ie. one word name or first and last with an underscore). Use a real email as you will be sent an activation link for verification.
+	<strong>Step 1</strong>: Fill out the registration form (use your byline ie. one word name or first and last with an underscore). <br/>Use a real email as you will be sent an activation link for verification.
 	<br/>
 	<strong>Step 2</strong>: Check your email ... click the link sent to verify that your email address is valid.
 	<br/>
