added editor management into views

--- a/news21national/templates/n21alpha/editorsdesk/review_photo.html
+++ b/news21national/templates/n21alpha/editorsdesk/review_photo.html
@@ -111,7 +111,7 @@
 <br/>
 <br/>
 
-<div class="grid_16">{{image.}}
+<div class="grid_16">
 	{% comment_counts_for_objects [mediaclass] as comment_count_dict %}
 	<h4>Editor's Comments {{comment_count_dict}}</h4>
 	<div>STATUS: {{image.status}}</div>
