--- a/news21national/templates/n21alpha/story/story.html
+++ b/news21national/templates/n21alpha/story/story.html
@@ -3,23 +3,105 @@
 
 {% load i18n %}
 {% load smart_if %}
+{% load uni_form_tags %}
+{% load discussion_tags %}
 
 
 {% block content %}
+	
+	
 	<div class="grid_10">
+<form action="{{ form_url }}" class="uniForm" method="post">
 	<div class="genericForm contentheader">
-		<form action="{{ form_url }}" method="post">
 		<h4>Story Info</h4>
-		{{ form.as_p }}
-		<p>
-			<label for="id_authors">Authors:</label>
-			<select name="authors" id="id_authors" multiple="true" size="8">
-				{% for member in newsrooms_members %}
-					<option {% for author in authors %} {% if member == author %} selected {% endif %} {% endfor %}  value="{{member.id}}">{{ member }} ( {%for newsroom in member.newsroom_members.all%} {{ newsroom }} {% endfor %} ) </option>
-				{% endfor %}
-			</select>
-		</p>
 		{% if story_id %}
+			<div style="padding:5px;">
+				<span class="icon-{% if story.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{story.status}} 
+				<a href="#editorscomments">[View Editor's Comments]</a>
+			</div>
+		{% endif %}
+		
+		{% with form.helper as helper %}
+		    {% uni_form form helper %}
+		{% endwith %}
+		
+		<fieldset class="inlineLabels">
+			<div class="ctrlHolder " id="div_id_authors">
+				<label for="id_authors">Authors:</label>
+				<select name="authors" id="id_authors" class="selectmultiple" multiple="true" size="8">
+					{% for member in newsrooms_members %}
+						<option {% for author in authors %} {% if member == author %} selected {% endif %} {% endfor %}  value="{{member.id}}">{{ member }} ( {%for newsroom in member.newsroom_members.all%} {{ newsroom }} {% endfor %} ) </option>
+					{% endfor %}
+				</select>
+			</div>
+		
+			<div class="ctrlHolder " id="div_id_inherited_tags">
+				<label style="padding-top:9px;">Inherited Tags:</label>
+				<span class="inputDiv" id="inherited_tags"></span>
+			</div>
+			<div class="ctrlHolder " id="div_id_tags">
+				<label>Tags:</label>
+				<div class="inputDiv" style="margin-left:48%;">
+				{% for tag in tags %}
+					<input type="checkbox" name="tag_{{tag.id}}" value="{{tag}}" id="tag_{{tag.id}}" {% for used_tag in used_tags %} {% if tag == used_tag %} checked="true" {% endif %} {% endfor %}  /> {{tag}}
+					{% if forloop.counter|divisibleby:2 %}<br/>{% endif %}
+				{% endfor %}
+				</div>
+			</div>
+		</fieldset>
+		
+		<div class="clear"></div>
+		
+		<h4>Social Checklist</h4>
+		<fieldset class="inlineLabels">
+			<div class="ctrlHolder " id="div_id_twitter_description">
+				<label>Twitter Tweet:
+					<br/><br/>
+					<span id="charlimittwitter"></span>
+				</label>
+				<span class="inputDiv">
+					<textarea name="twitter_description" id="twitter_description" rows="8" cols="40">{{ twitter_payload.blurb }}</textarea>
+				</span>
+			</div>
+			<div class="ctrlHolder " id="div_id_facebook_description">
+				<label>Facebook Status:
+					<br/><br/>
+					<span id="charlimitfacebook"></span>
+				</label>
+				<span class="inputDiv">
+					<textarea name="facebook_description" id="facebook_description" rows="8" cols="40">{{ facebook_payload.blurb }}</textarea>
+				</span>
+			</div>
+			<div class="ctrlHolder " id="div_id_upiu_description">
+				<label>UPIU Post:
+					<br/><br/>
+					<span id="charlimitupiu"></span>
+				</label>
+				<span class="inputDiv">
+					<textarea name="upiu_description" id="upiu_description" rows="8" cols="40">{{ upiu_payload.blurb }}</textarea>
+				</span>
+			</div>
+		</fieldset>
+
+		<div class="clear"></div>
+		<br/>
+		
+		<div class="inputSubmit">
+			<input type="submit" value="Continue &rarr;">
+		</div>
+		
+		<div class="clear"></div>
+		<br/>
+		
+		{% if story_id %}
+		<h4>Audit</h4>
+		<div><strong>Created by:</strong> {{ audit.created_by }} <strong>at</strong> {{ audit.created_at|date:"M d, Y @ g i a" }}</div>
+		<div><strong>Last Updated by:</strong> {{ audit.updated_by }} <strong>at</strong> {{ audit.updated_at|date:"M d, Y @ g i a" }}</div>
+		
+		<div class="clear"></div>
+		<br/><br/>
+		
+		<h4>Suggested Publish Dates</h4>
 		<p>
 			<label>Publish Title & Dates:</label>
 			<input type="text" id="publishdatetitle" size="20"> between <input type="text" id="available_at" class="jcal"> - <input type="text" id="expires_at" class="jcal"> <input type="button" id="add_publishdate" value="+">
@@ -27,71 +109,19 @@
 		<div class="clear"></div>
 		<p>
 			<label>Current Suggestions:</label>
-			<span class="inputDiv">
+			<span class="inputDiv" id="current_suggested_dates">
 				{% for pdate in story_pubdates %}
-				<div style="padding:2px;">{{pdate.title}} : {{pdate.available_at|date:"M d, Y"}}-{{pdate.expires_at|date:"M d, Y"}} <a href="##"><img src="{{MEDIA_URL}}templates/n21alpha/images/cross.png" style="vertical-align: middle;" ></a></div>
+				<div style="padding:2px;">{{pdate.title}} : {{pdate.available_at|date:"M d, Y"}}-{{pdate.expires_at|date:"M d, Y"}} </div>
 				{% endfor %}
+				{% comment %}
+				<a href="##"><img src="{{MEDIA_URL}}templates/n21alpha/images/cross.png" style="vertical-align: middle;" ></a>
+				{% endcomment %}
 			</span>
 		</p>
 		{% endif %}
-		<div class="clear"></div>
-		<br/>
-		<p>
-			<label style="padding-top:7px;">Inherited Tags:</label>
-			<span class="inputDiv" id="inherited_tags">{% for tag in inherited_tags %} <span class="tag">{{tag}}</span> {% endfor %}</span>
-		</p>
-		<div class="clear"></div>
-		<p>
-			<label>Tags:</label>
-			<span class="inputDiv">
-			{% for tag in tags %}
-				<input type="checkbox" name="tag_{{tag.id}}" value="{{tag}}" id="tag_{{tag.id}}"  {% for used_tag in used_tags %} {% if tag.id == used_tag.id %} checked="true" {% endif %} {% endfor %}  > {{tag}}
-				{% if forloop.counter|divisibleby:4 %}<br/>{% endif %}
-			{% endfor %}
-			</span>
-		</p>
 		
 		<div class="clear"></div>
-		<br/>
-
-		<h4>Social Checklist</h4>
-		<p>
-			<label>Twitter Tweet:</label>
-			<span class="inputDiv">
-				<textarea name="twitter_description" id="twitter_description" rows="8" cols="40">{{ twitter_payload.blurb }}</textarea>
-				<br/>
-				<span id="charlimittwitter"></span>
-			</span>
-		</p>
-		<p>
-			<label>Facebook Status:</label>
-			<span class="inputDiv">
-				<textarea name="facebook_description" id="facebook_description" rows="8" cols="40">{{ facebook_payload.blurb }}</textarea>
-				<br/>
-				<span id="charlimitfacebook"></span>
-			</span>
-		</p>
-		<p>
-			<label>UPIU Post:</label>
-			<span class="inputDiv">
-				<textarea name="upiu_description" id="upiu_description" rows="8" cols="40">{{ upiu_payload.blurb }}</textarea>
-				<br/>
-				<span id="charlimitupiu"></span>
-			</span>
-		</p>
-
-		<div class="clear"></div>
-		<br/>
-		{% if story_id %}
-		<div><strong>Created by:</strong> {{ audit.created_by }} <strong>at</strong> {{ audit.created_at|date:"M d, Y @ g i a" }}</div>
-		<div><strong>Last Updated by:</strong> {{ audit.updated_by }} <strong>at</strong> {{ audit.updated_at|date:"M d, Y @ g i a" }}</div>
-		{% endif %}
-		<div class="inputSubmit">
-			<input type="submit" value="Continue &rarr;">
-		</div>
-		
-		<div class="clear"></div>
-		<br/>
+		<br/><br/>
 		
 		<h4>Story Geotags</h4>
 		<div id="map" class="smallmap"></div>
@@ -102,7 +132,7 @@
 	<div class="contentheader">
 		<h4>Story Assets</h4>
 		{% if story_id %}
-			<div>Add: <a href="{% url plaintext_new metastory_id story_id %}">Plain Text</a> <!--| <a href="">Video</a> -->| <a href="{% url photo_new metastory_id story_id %}">Photo</a> | <a href="{% url audio_new metastory_id story_id %}">Audio</a><!-- | <a href="">Gallery</a>--><!-- | <a href="{% url swf_new metastory_id story_id %}">SWF</a>--></div>
+			<div>Add: <a href="{% url plaintext_new metastory_id story_id %}">Plain Text</a> | <a href="{% url video_new metastory_id story_id %}">Video</a> | <a href="{% url photo_new metastory_id story_id %}">Photo</a> | <a href="{% url audio_new metastory_id story_id %}">Audio</a><!-- | <a href="">Gallery</a>--><!-- | <a href="{% url swf_new metastory_id story_id %}">SWF</a>--></div>
 		{% else %}
 			<div>You have not created any media assets yet.</div>
 		{% endif %}
@@ -164,11 +194,47 @@
 			</div>
 			{% endif %}
 		{% endfor %}
-		</form>
+		
 	</div>
+</form>
+	</div>
+
+
+	<div class="clear"></div>
+	<br/>
+	<br/>
+	
+	<div class="grid_16 contentheader">
+		<br/>
+		<h4 id="editorscomments">Editor's Comments</h4>
+		<div><span class="icon-{% if story.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{story.status}}</div>
+		{% comment_tree_for_object story as comments %}
+		{% for comment in comments %}
+			<div style="padding:15px;" class="sidebar-right-listing image-selector alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+				Commented: {{ comment.pub_date|date:"M d, Y @ f" }} By: {{ comment.user }}<br/>
+				{{ comment }}
+			</div>
+		{% endfor %}
+		{% if comments.count == 0 %}
+			<div>Your editors have not made any comments yet.</div>
+		{% endif %}
+		{% if is_editor %}
+			<form action="{% url editorsdesk_update_status_story metastory_id story_id %}" method="post">
+				<textarea name="comment_body" id="comment_body" rows="8" cols="100"></textarea>
+				<br/>
+				<select name="story_status" id="story_status" style="float:left;width:150px;margin-right:20px;">
+					<option value="Pending Approval">Pending Approval</option>
+					<option value="Rejected" {% if story.status == "Rejected" %} selected {% endif %} >Rejected</option>
+					<option value="Approved" {% if story.status == "Approved" %} selected {% endif %} >Approved</option>
+				</select>
+				<input type="submit" value="Comment &rarr;">
+			</form>
+		{% endif %}
 	</div>
 	
 	<div class="clear"></div>
+	<br/>
+	
 {% endblock %}
 
 
@@ -176,11 +242,19 @@
 {% block extra_styles %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}templates/n21alpha/css/google.css" />
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}templates/n21alpha/css/openlayers.css" />
+
+<link rel="stylesheet" href="{{ MEDIA_URL }}uni_form/uni-form-generic.css" type="text/css" />
+<link rel="stylesheet" href="{{ MEDIA_URL }}uni_form/uni-form.css" type="text/css" />
 {% endblock %}
 
 {% block extra_scripts %}
 <script src='http://maps.google.com/maps?file=api&amp;v=2&amp;key={{ google_maps_api_key }}'></script>
 <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}uni_form/uni-form.jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ajax_validation/jquery-ajax-validation.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ajax_validation/jquery-uni-form.js"></script>
 {% endblock %}
 
 
@@ -252,7 +326,10 @@
 		$('#add_publishdate').click( function() {
 		  	$.post("{% url storypublishdate_create metastory_id story_id %}", { "title": $('#publishdatetitle').val() , "available_at": $('#available_at').val() , "expires_at": $('#expires_at').val() },
 			   function(data){
-			     alert(data.success);
+				$("#current_suggested_dates").append('<div style="padding:2px;">'+$('#publishdatetitle').val()+' : '+$('#available_at').val()+'-'+$('#expires_at').val()+' </div>');
+				$('#publishdatetitle').val('');
+				$('#available_at').val('');
+				$('#expires_at').val('');
 			   }, "json");
 		});
 		{% endif %}
