--- a/news21national/templates/n21alpha/story/metastory.html
+++ b/news21national/templates/n21alpha/story/metastory.html
@@ -3,38 +3,56 @@
 {% load i18n %}
 {% load smart_if %}
 {% load uni_form_tags %}
+{% load discussion_tags %}
 
 {% block content %}
-<form action="{{ form_url }}" class="uniForm" method="post">
+	
 	<div class="grid_10">
+	<form action="{{ form_url }}" class="uniForm" method="post">
 	<div class="genericForm contentheader">	
 		<h4>Package Information</h4>
+		{% if metastory_id %}
+			<div style="padding:5px;">
+				<span class="icon-{% if metastory.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{metastory.status}} 
+				<a href="#editorscomments">[View Editor's Comments]</a>
+			</div>
+		{% endif %}
+		
 		{% with form.helper as helper %}
 		    {% uni_form form helper %}
 		{% endwith %}
-		<p>
+		
+		<fieldset class="inlineLabels">
+		<div class="ctrlHolder " id="div_id_inherited_tags">
 			<label style="padding-top:9px;">Inherited Tags:</label>
 			<span class="inputDiv" id="inherited_tags"></span>
-		</p>
-		<div class="clear"></div>
-		<p>
+		</div>
+		<div class="ctrlHolder " id="div_id_tags">
 			<label>Tags:</label>
-			<span class="inputDiv">
+			<div class="inputDiv" style="margin-left:48%;">
 			{% for tag in tags %}
 				<input type="checkbox" name="tag_{{tag.id}}" value="{{tag}}" id="tag_{{tag.id}}" {% for used_tag in used_tags %} {% if tag == used_tag %} checked="true" {% endif %} {% endfor %}  /> {{tag}}
-				{% if forloop.counter|divisibleby:4 %}<br/>{% endif %}
+				{% if forloop.counter|divisibleby:2 %}<br/>{% endif %}
 			{% endfor %}
-			</span>
-		</p>
+			</div>
+		</div>
+		</fieldset>
+		
+		
 		<div class="clear"></div>
 		<br/>
-		{% if metastory_id %}
-		<div><strong>Created by:</strong> {{ audit.created_by }} <strong>at</strong> {{ audit.created_at|date:"M d, Y @ g i a" }}</div>
-		<div><strong>Last Updated by:</strong> {{ audit.updated_by }} <strong>at</strong> {{ audit.updated_at|date:"M d, Y @ g i a" }}</div>
-		{% endif %}
 		<div class="inputSubmit">
 			<input type="submit" value="Continue &rarr;">
 		</div>
+		
+		{% if metastory_id %}
+		<div class="clear"></div>
+		<br/>
+		
+		<h4>Audit</h4>
+		<div><strong>Created by:</strong> {{ audit.created_by }} <strong>at</strong> {{ audit.created_at|date:"M d, Y @ g i a" }}</div>
+		<div><strong>Last Updated by:</strong> {{ audit.updated_by }} <strong>at</strong> {{ audit.updated_at|date:"M d, Y @ g i a" }}</div>
+		{% endif %}
 		
 		
 		<div class="clear"></div>
@@ -106,9 +124,10 @@
 			</div>
 			{% endif %}
 		{% endfor %}
+		</form>
 		
 	</div>
-</form>
+
 	
 	<div class="clear"></div>
 	<br/>
@@ -129,6 +148,39 @@
 	</div>
 	
 	<div class="clear"></div>
+	<br/>
+
+	<div class="grid_16 contentheader">
+		<br/>
+		<h4 id="editorscomments">Editor's Comments</h4>
+		<div><span class="icon-{% if metastory.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{metastory.status}}</div>
+		{% comment_tree_for_object metastory as comments %}
+		{% for comment in comments %}
+			<div style="padding:15px;" class="sidebar-right-listing image-selector alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+				Commented: {{ comment.pub_date|date:"M d, Y @ f" }} By: {{ comment.user }}<br/>
+				{{ comment }}
+			</div>
+		{% endfor %}
+		{% if comments.count == 0 %}
+			<div>Your editors have not made any comments yet.</div>
+		{% endif %}
+		{% if is_editor %}
+			<form action="{% url editorsdesk_update_status_metastory metastory_id %}" method="post">
+				<textarea name="comment_body" id="comment_body" rows="8" cols="100"></textarea>
+				<br/>
+				<select name="story_status" id="story_status" style="float:left;width:150px;margin-right:20px;">
+					<option value="Pending Approval">Pending Approval</option>
+					<option value="Rejected" {% if story.status == "Rejected" %} selected {% endif %} >Rejected</option>
+					<option value="Approved" {% if story.status == "Approved" %} selected {% endif %} >Approved</option>
+				</select>
+				<input type="submit" value="Comment &rarr;">
+			</form>
+		{% endif %}
+	</div>
+	
+	<br/><br/>
+	<div class="clear"></div>
+	
 {% endblock %}
 
 
@@ -136,6 +188,7 @@
 {% block extra_styles %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}templates/n21alpha/css/google.css" />
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}templates/n21alpha/css/openlayers.css" />
+
 <link rel="stylesheet" href="{{ MEDIA_URL }}uni_form/uni-form-generic.css" type="text/css" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}uni_form/uni-form.css" type="text/css" />
 {% endblock %}
